--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@ body, html {
     height: 100%;
     margin: 0;
   }
+  html {
+    scroll-behavior: smooth;
+  }
 .header_f{
     
     position: relative;
@@ -141,3 +144,37 @@ body, html {
       font-size: 1.2rem; /* Reducir el tamaño de los iconos en pantallas pequeñas */
     }
   }
+  /* Estilos para la sección de contacto */
+.contact-section {
+  padding: 50px 0;
+  background-color: #f8f9fa;
+}
+
+.contact-section h2 {
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 2.5rem;
+}
+
+.contact-info {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.contact-info h4 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  color: #007bff;
+}
+
+.contact-info p {
+  font-size: 1.1rem;
+  margin: 0;
+}
+
+/* Responsividad */
+@media (max-width: 768px) {
+  .contact-info {
+    margin-bottom: 30px;
+  }
+}
