--- a/css/styles.css
+++ b/css/styles.css
@@ -144,37 +144,17 @@ body, html {
       font-size: 1.2rem; /* Reducir el tamaño de los iconos en pantallas pequeñas */
     }
   }
-  /* Estilos para la sección de contacto */
-.contact-section {
-  padding: 50px 0;
-  background-color: #f8f9fa;
+  .whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25D366;
+    color: white;
+    border-radius: 50%;
+    padding: 15px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
-
-.contact-section h2 {
-  text-align: center;
-  margin-bottom: 40px;
-  font-size: 2.5rem;
-}
-
-.contact-info {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.contact-info h4 {
-  font-size: 1.5rem;
-  margin-bottom: 10px;
-  color: #007bff;
-}
-
-.contact-info p {
-  font-size: 1.1rem;
-  margin: 0;
-}
-
-/* Responsividad */
-@media (max-width: 768px) {
-  .contact-info {
-    margin-bottom: 30px;
-  }
+.whatsapp-float img {
+    width: 30px;
+    height: 30px;
 }
