--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body, html {
     height: 100%;
     margin: 0;
@@ -9,7 +14,7 @@ body, html {
     
     position: relative;
     height: 100vh;
-    background-image: url(../assets/parrilla.jpg);
+    background-image: url(../assets/spa_fondo1.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -49,6 +54,7 @@ body, html {
   }
   .text_p{
     font-family: "Dancing Script", cursive;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   }
   /* Responsividad para pantallas más pequeñas */
   @media (max-width: 768px) {
@@ -64,10 +70,10 @@ body, html {
 
   
 .bg-imagen {
-    background-image: url(../assets/parrilla2.jpg);
+    background-image: url(../assets/spa_fondo_2.jpg);
     background-size: cover;
     background-position: center;
-    height: 100%;
+    height: 107%;
     position: relative;
     color: white;
     
@@ -157,4 +163,41 @@ body, html {
 .whatsapp-float img {
     width: 30px;
     height: 30px;
+}
+/*Estilo de galeria*/
+.card-img-top {
+  width: 100%;
+  height: 200px; /* Altura fija para que todas las imágenes tengan el mismo tamaño */
+  object-fit: cover; /* Mantiene la proporción de la imagen, recortando si es necesario */
+  border-radius: 15px;
+}
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end; /* Empuja el contenido hacia abajo */
+  height: 100%;
+}
+
+/* Asegura que las descripciones se mantengan centradas */
+.card-text {
+  margin-top: auto;
+}
+
+
+.card{
+  margin-top: 35px;
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 15px;
+  color:white;
+  background-color: #393534;
+}
+.bg-imagen2 {
+  background-image: url(../assets/fondo_galeria.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  position: relative;
+  
+  
 }
