--- a/css/styles.css
+++ b/css/styles.css
@@ -3,189 +3,222 @@
   padding: 0;
   box-sizing: border-box;
 }
-body, html {
-    height: 100%;
-    margin: 0;
-  }
-  html {
-    scroll-behavior: smooth;
-  }
-.header_f{
-    
-    position: relative;
-    height: 100vh;
-    background-image: url(../assets/spa_fondo1.jpg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-   
-     
+
+body,
+html {
+  height: 100%;
+  margin: 0;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+.header_f {
+
+  position: relative;
+  height: 100vh;
+  background-image: url(../assets/spa_fondo1.jpg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+
+
+}
+
 .slogan-container {
-    display: flex;
-    text-align: center;
-    height: 400px;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    
-   
-  }
-  .sub_slogan-text {
-    font-size: 0.8rem;
-    font-family: "Libre Baskerville", serif;
-    font-weight: 400;
-    font-style: normal;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: black;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Sombra para mejorar legibilidad */
-  }
-  
-  .slogan-text {
-    font-size: 5rem;
-    font-family: "Libre Baskerville", serif;
-    font-weight: 400;
-    font-style: normal;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: black;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Sombra para mejorar legibilidad */
-  }
-  .text_p{
-    font-family: "Libre Baskerville", serif;
-    font-weight: 400;
-    font-style: normal;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  .text-center {
-    font-family: "Libre Baskerville", serif;
-    font-weight: 400;
-    font-style: normal;
+  display: flex;
+  text-align: center;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+
 }
+
+.sub_slogan-text {
+  font-size: 0.8rem;
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: black;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  /* Sombra para mejorar legibilidad */
+}
+
+.slogan-text {
+  font-size: 5rem;
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: black;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  /* Sombra para mejorar legibilidad */
+}
+
+.text_p {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: normal;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.text-center {
+  font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 h1 {
   font-size: 2rem;
 }
-  /* Responsividad para pantallas más pequeñas */
-  @media (max-width: 768px) {
-    .slogan-text {
-      font-size: 2rem; /* Ajusta el tamaño del texto en dispositivos pequeños */
-    }
-  
-    .slogan-container {
-      padding: 15px;
-    }
+
+/* Responsividad para pantallas más pequeñas */
+@media (max-width: 768px) {
+  .slogan-text {
+    font-size: 2rem;
+    /* Ajusta el tamaño del texto en dispositivos pequeños */
   }
 
-
-  
-.bg-imagen {
-    background-image: url(../assets/spa_fondo_2.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 107%;
-    position: relative;
-    color: white;
-    
-  }
-  
-  
-  .content {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90%; /* Más adaptable en pantallas pequeñas */
-    max-width: 800px; /* Limita el ancho en pantallas grandes */
-    text-align: justify;
-    
-  }
-  
-  /* Imagen redondeada */
-  .img-central {
-    width: 50%; /* Hacemos que la imagen ocupe un porcentaje del contenedor */
-    max-width: 200px; /* Limita el tamaño máximo en pantallas grandes */
-    height: auto; /* Mantiene la proporción correcta */
-    margin-top: 15px;
-    border: solid 2px;
-  }
-  
-  /* Ajustes responsivos para pantallas pequeñas */
-  @media (max-width: 576px) {
-    .content {
-      width: 95%; /* Más espacio en pantallas pequeñas */
-      top: 53%; /* Ajusta la posición vertical en pantallas pequeñas */
-    }
-  
-    .img-central {
-      width: 44%; /* Aumenta el tamaño de la imagen en pantallas más pequeñas */
-    }
-  }
-  .footer {
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    padding: 20px 0;
-  }
-  
-  .footer p {
-    margin: 0;
-    font-size: 1rem;
-  }
-  
-  /* Estilos para los iconos de redes sociales */
-  .footer .btn-floating {
-    font-size: 1.5rem; /* Tamaño de los iconos */
-    width: 50px;
-    height: 20px;
-    border-radius: 50%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 0.3s ease;
-  }
-  
-  .footer .btn-floating:hover {
-    background-color: #ffffff33; /* Efecto hover en los iconos */
-  }
-  
-  /* Ajustes responsivos */
-  @media (max-width: 576px) {
-    .footer p {
-      font-size: 0.9rem; /* Reducir el tamaño del texto en móviles */
-    }
-  
-    .footer .btn-floating {
-      width: 40px;
-      height: 40px;
-      font-size: 1.2rem; /* Reducir el tamaño de los iconos en pantallas pequeñas */
-    }
-  }
-  .whatsapp-float {
-    position: fixed;
-    bottom: 20px;
-    right: 50px;
-    background-color: #25D366;
-    
-    border-radius: 50%;
+  .slogan-container {
     padding: 15px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  }
 }
+
+
+
+.bg-imagen {
+  background-image: url(../assets/spa_fondo_2.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 107%;
+  position: relative;
+  color: white;
+
+}
+
+
+.content {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  /* Más adaptable en pantallas pequeñas */
+  max-width: 800px;
+  /* Limita el ancho en pantallas grandes */
+  text-align: justify;
+
+}
+
+/* Imagen redondeada */
+.img-central {
+  width: 50%;
+  /* Hacemos que la imagen ocupe un porcentaje del contenedor */
+  max-width: 200px;
+  /* Limita el tamaño máximo en pantallas grandes */
+  height: auto;
+  /* Mantiene la proporción correcta */
+  margin-top: 15px;
+  border: solid 2px;
+}
+
+/* Ajustes responsivos para pantallas pequeñas */
+@media (max-width: 576px) {
+  .content {
+    width: 95%;
+    /* Más espacio en pantallas pequeñas */
+    top: 53%;
+    /* Ajusta la posición vertical en pantallas pequeñas */
+  }
+
+  .img-central {
+    width: 44%;
+    /* Aumenta el tamaño de la imagen en pantallas más pequeñas */
+  }
+}
+
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  padding: 20px 0;
+}
+
+.footer p {
+  margin: 0;
+  font-size: 1rem;
+}
+
+/* Estilos para los iconos de redes sociales */
+.footer .btn-floating {
+  font-size: 1.5rem;
+  /* Tamaño de los iconos */
+  width: 50px;
+  height: 20px;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s ease;
+}
+
+.footer .btn-floating:hover {
+  background-color: #ffffff33;
+  /* Efecto hover en los iconos */
+}
+
+/* Ajustes responsivos */
+@media (max-width: 576px) {
+  .footer p {
+    font-size: 0.7rem;
+    margin-top: 51px;
+    /* Reducir el tamaño del texto en móviles */
+  }
+
+  .footer .btn-floating {
+    width: 40px;
+    height: 40px;
+    font-size: 1.2rem;
+    /* Reducir el tamaño de los iconos en pantallas pequeñas */
+  }
+}
+
+.whatsapp-float {
+  position: fixed;
+  bottom: 42px;
+  right: 50px;
+  background-color: #25D366;
+  border-radius: 50%;
+  padding: 15px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
 .whatsapp-float img {
-    width: 30px;
-    height: 30px;
-   
+  width: 30px;
+  height: 30px;
+
 }
+
 /*Estilo de galeria*/
 .card-img-top {
   width: 100%;
-  height: 200px; /* Altura fija para que todas las imágenes tengan el mismo tamaño */
-  object-fit: cover; /* Mantiene la proporción de la imagen, recortando si es necesario */
+  height: 200px;
+  /* Altura fija para que todas las imágenes tengan el mismo tamaño */
+  object-fit: cover;
+  /* Mantiene la proporción de la imagen, recortando si es necesario */
   border-radius: 15px;
 }
+
 .card-body {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end; /* Empuja el contenido hacia abajo */
+  justify-content: flex-end;
+  /* Empuja el contenido hacia abajo */
   height: 100%;
 }
 
@@ -195,20 +228,21 @@ h1 {
 }
 
 
-.card{
+.card {
   margin-top: 35px;
   margin-left: 20px;
   margin-right: 20px;
   border-radius: 15px;
-  color:white;
+  color: white;
   background-color: #393534;
 }
+
 .bg-imagen2 {
   background-image: url(../assets/fondo_galeria.jpg);
   background-size: cover;
   background-position: center;
   height: 100%;
   position: relative;
-  
-  
+
+
 }
