--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,18 @@ html {
 
 
 }
-
+.contenedor_logo{
+  display: flex;
+  width: 50px;
+  height: 50px;
+}
+.logo{
+  width:100% ;
+  height:100%;
+  padding: 0.1rem;
+  border-radius: 50%;
+  
+}
 .slogan-container {
   display: flex;
   text-align: center;
